--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,7 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://gcushen.github.io/hugo-academic-demo/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = ['r', 'python', 'perl', 'bash']
+  highlight_languages = ['r', 'python', 'perl', 'bash', 'json']
   highlight_style = "monokai"
   # highlight_version = "9.9.0"
 
