--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://bioinformatist.github.io/"
-title = "Yu Sun's website"
+title = "Yu Sun's Blog"
 copyright = "&copy; 2017 Yu Sun"
 theme = "academic"
 enableEmoji = true
@@ -7,10 +7,10 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "ysun"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-107187080-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
