--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 before_install:
     - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
-    - git submodule update --init --recursive
+    - git fetch --recurse-submodules
 
 install: go get -v github.com/gohugoio/hugo
 
