use git clone without submodule but fetch recursively later

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: go
 # Thanks to this answer: https://stackoverflow.com/questions/15674064/github-submodule-access-rights-travis-ci/24600210#24600210
 # Handle git submodules yourself
 git:
+    depth: 1
     submodules: false
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 before_install:
