--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,17 @@
+# Configuration of Academic
+# Documentation: https://sourcethemes.com/academic/
+
+# The URL of your website.
+# End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 baseurl = "https://bioinformatist.github.io/"
+
+# Title of your site
 title = "Yu Sun's Blog"
+
+# Your copyright notice - appears in site footer.
+# To display a copyright symbol, type `&copy;`.
 copyright = "&copy; 2017 Yu Sun"
+
 theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
@@ -16,7 +27,11 @@ googleAnalytics = "UA-107187080-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
+hasCJKLanguage = true  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
+
+# Get last modified date for content from Git?
+enableGitInfo = true
 
 [outputs]
   home = [ "HTML", "CSS", "RSS" ]
@@ -31,7 +46,7 @@ defaultContentLanguageInSubdir = false
 
 [params]
   # Color theme.
-  #   Choose from `default`, `ocean`, `forest`, or `coffee`.
+  #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
   color_theme = "forest"
 
   # Font style.
@@ -41,21 +56,21 @@ defaultContentLanguageInSubdir = false
   # Your details.
   name = "Yu Sun"
   role = "Postgraduate of Bioinformatics"
-  
+
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Nankai University", url = "http://www.nankai.edu.cn/" } ]
+  organizations = [ { name = "Sun Yat-sen University", url = "http://www.sysu.edu.cn/2012/cn/index.htm" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "sun_yu@mail.nankai.edu.cn"
-  address = "Building 4 Room 205, Nankai University, Tianjin, 300071, China"
+  address = "Not available recently"
   office_hours = "Monday to Friday: 08:30 to 11:00 and 14:30 to 17:00; Saturday & Sunday: 10:30 to 16:00; Or email for appointment"
-  phone = "+86-18222462005"
+  phone = "Not available recently"
   skype = ""
   telegram = ""
 
-  # Enable Keybase in Contact section by entering your keybase.io username.
+  # Enable Keybase in Contact widget by entering your keybase.io username.
   keybase = ""
 
   # Discussion link (e.g. link to a forum, mailing list, or chat).
@@ -87,7 +102,7 @@ defaultContentLanguageInSubdir = false
   longitude = "-122.1697"
   zoom = 15
 
-  # Date format (refer to Go's date format: http://flippinggodateformat.com )
+  # Date and time format (refer to Go's date format: http://fuckinggodateformat.com )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
   date_format = "Mon, Jan 2, 2006"
   #   Examples: "3:04 pm" or "15:04"
@@ -99,7 +114,7 @@ defaultContentLanguageInSubdir = false
   # Display comment count? Requires commenting to be enabled.
   comment_count = true
 
-  # Display section pager for posts?
+  # Display next/previous section pager?
   section_pager = false
 
   # Enable global LaTeX math rendering?
@@ -134,11 +149,16 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = ['r', 'python', 'perl', 'shell', 'json', 'pre']
+  highlight_languages = ['r', 'python', 'perl', 'shell', 'json', 'pre', 'bash']
   highlight_style = "monokai"
 
   # Enable native social sharing buttons?
   sharing = true
+
+  # Privacy pack
+  #   Show a cookie consent message to visitors
+  #   Anonymize IP in Google Analytics (if enabled)
+  privacy_pack = false
 
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
@@ -150,15 +170,16 @@ defaultContentLanguageInSubdir = false
   #   The index of the publication type in the list is used as its unique numerical identifier.
   #   The numeric ID is used in a publication's frontmatter to categorize it.
   #   The language can be edited below.
-  #   For multi-lingual sites, copy this block to each language section at the end of this file.
+  #   For multilingual sites, `publication_types` can be copied to each language section at the end of this file and
+  #   translated.
   publication_types = [
     'Uncategorized',  # 0
-    'Conference proceedings',  # 1
-    'Journal',  # 2
-    'Work in progress',  # 3
-    'Technical report',  # 4
+    'Conference paper',  # 1
+    'Journal article',  # 2
+    'Manuscript',  # 3
+    'Report',  # 4
     'Book',  # 5
-    'Book chapter'  # 6
+    'Book section'  # 6
   ]
 
   # Configuration of talk pages.
@@ -222,6 +243,9 @@ defaultContentLanguageInSubdir = false
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
+[params.menus]
+  # Align the main menu to the right of the page? (true/false)
+  align_right = true
 
 [[menu.main]]
   name = "Home"
@@ -258,5 +282,5 @@ defaultContentLanguageInSubdir = false
 #   Create a [languages.X] block for each language you want, where X is the language ID.
 
 # Configure the English version of the website.
-[languages.en]
+[Languages.en]
   languageCode = "en-us"
